--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "bootstrap": "^5.2.2",
     "heroku": "^7.65.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
